[package]
edition = "2018"
name = "log-structured-filesystem"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.41"
byte-unit = {version = "4.0.12", default-features = false}
clap = "3.0.0-beta.2"
fuse = "0.3.1"
lazy_static = {version = "1.4.0", features = ["spin_no_std"]}
nix = "0.22.1"
rand = "0.8.4"
serde = {version = "1.0.126", features = ["derive"]}
serde_json = "1.0.64"
spin = "0.7.0"
tempfile = "3.2.0"
thiserror = "1.0.25"
tracing = "0.1.26"
tracing-subscriber = "0.2.19"

[[bin]]
name = "fuse"
path = "bin/fuse/mod.rs"
